--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@
 
 #game-board {
     border: 5px solid black;
-    height: 50vh;
-    width: 50vw;
+    border-radius: 3%;
+    height: 500px;
+    width: 500px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
