Add styles to  new game button. Add functionality to button. Now resets game.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@ body {
     align-items: center;
 }
 
+.sidebar {
+    display: grid;
+    grid-template-rows: repeat(9, 1fr);
+    grid-template-columns: 1;
+    position: fixed;
+    left: 0;
+    padding-left: 70px;
+
+}
+
 #container {
     height: 100vh;
     width: 50vw;
@@ -71,4 +81,42 @@ body {
 #playing-space9 {
     border-top: solid black 2px;
     border-left: solid black 2px;
+}
+
+#new-game {
+  background-color: #0095ff;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
+  font-size: 65px;
+  font-weight: 400;
+  line-height: 1.15385;
+  outline: none;
+  padding: 8px .8em;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  align-items: center;
+}
+
+#new-game:hover,
+#new-game:focus {
+  background-color: #07c;
+}
+
+#new-game:focus {
+  box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
+}
+
+#new-game:active {
+  background-color: #0064bd;
+  box-shadow: none;
 }
